# broadcast

./: 192.168.0.26-key.pem  192.168.0.26.pem  192.168.0.7-key.pem  192.168.0.7.pem  Cargo.toml  workspace.code-workspace
app/: 127.0.0.1-key.pem  127.0.0.1.pem  192.168.0.7-key.pem  192.168.0.7.pem  angular.json  package-lock.json  package.json  tsconfig.json  vue.config.js
app/src/: App.vue  router.d.ts
app/src/app/: app-routing.module.ts  app.component.html  app.module.ts
app/src/app/interfaces/: request.ts  response.ts  room.ts  websocket-config.ts
app/src/app/pages/home/: home.component.html  home.component.scss  home.component.ts  home.module.ts
app/src/app/pages/room/: room-routing.module.ts  room.component.html  room.component.ts  room.module.ts
app/src/app/resolvers/: room.resolver.ts
app/src/app/services/: services.module.ts
app/src/app/services/home/: home.service.ts
app/src/app/services/http/: http-service.service.ts
app/src/app/services/room/: room.service.ts
app/src/app/services/websocket/: websocket.module.ts  websocket.service.ts
app/src/router/: index.ts
app/src/views/: Home.vue  Room.vue
broadcast/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
broadcast/src/app/: app-routing.module.ts  app.component.spec.ts  app.module.ts
broadcast/src/app/pages/home/: home.component.html
broadcast/src/router/: index.ts
broadcast/src/views/: Home.vue  Room.vue
src/: broadcaster.rs  broadcaster_context.rs  event.rs  main.rs  messages.rs  recipient.rs  room.rs  session.rs  state.rs  tls.rs  turn_server.rs
