[package]
edition = "2021"
name = "broadcast"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-cors = "0.6.0-beta.3"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.7"
anyhow = "1.0.41"
broadcast-context = {git = "https://github.com/K0R0VA/broadcast-context.git"}
serde = "1.0"
serde_json = "1.0"
tokio = "1.0"
uuid = {version = "0.8", features = ["serde", "v4"]}
webrtc = "0.1"
